--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Delete My IntegrateHub Plus Account</title>
-  </head>
-  <body>
-    <h1>Request Account Deletion</h1>
-    <p>If you want to delete your IntegrateHub Plus account and associated data, contact us at:</p>
-    <p><strong>support@yourdomain.com</strong></p>
-  </body>
+<head>
+  <title>IntegrateHub Plus – Privacy & Deletion</title>
+</head>
+<body>
+  <h1>Privacy Policy</h1>
+  <p>This app collects your email address for login using Firebase Authentication. Device identifiers are used to send push notifications. Data is encrypted in transit and not shared with third parties.</p>
+  <p>To request deletion of your account or any associated data, contact:</p>
+  <p><strong>integratehubplus@gmail.com</strong></p>
+  <p>We will process your request within 5 business days.</p>
+</body>
 </html>
